      collection and tracks from USB Mass Storage collection. Guessing uses the
      same algorithm as Local Collection.
    * libgpod requirement raised from 0.7.0 to 0.7.93 for better maintainability.
    * When hovering iPod, UMS or MTP collection in collection browser,
      "1.2 GB free" is shown instead of "85% used"; thicker capacity bar.

  BUGFIXES:
    * Prevent crash on very quick drag and release of tracks. (BR 295275)
    * Prevent occasional tag corruption on multi-byte UTF8 characters in tags.
    * Do not double-transcode tracks when importing from an audio CD. (BR 263775)
    * Fix resulting filetype when copying a track from Jamendo. (BR 296000)
    * Playlists with a dot in name can now be saved to Playlist Files on Disk. (BR 290318)
    * iPod playlists now appear even when plugged in while Amarok is running. (BR 289303)
    * Show in Media Sources actions no longer reset the collection sorting to artist/album. (BR 231858)
    * Don't mark audio-CD tracks as unplayable (greyed out). (BR 285885)
    * Don't misbehave when track is dropped directly to saved playlist. (BR 293295)
    * Don't report collection of USB Mass Storage tracks as None.
    * When adding, changing and removing tracks in USB Mass Storage collection,
      actually update the user interface to show it.
    * Remove empty folders when deleting tracks from USB Mass Storage collection.
    * Don't copy tracks to USB Mass Storage collection in move operation.
    * Fix defunct aborting of transfers to USB Mass Storage collection. (BR 290448)
    * Allow ripping of CD tracks with special characters in name tranks to
      Björn Steinbrink. (BR 224437)
    * Don't allow tracks to be dropped to their own collection and to
      non-writable collections; indicate the fact visually. (BR 291068)
    * Fix scrollarea following keyboard navigation. (BR 259791)
    * Fix crash when trying to save custom equalizer presets. (BR 286227)