@@ -59,6 +59,8 @@ Meta::TrackKey::TrackKey()
 Meta::TrackKey::TrackKey( const Meta::TrackPtr &track )
 {
     m_trackName = track->name();
+    m_discNumber = track->discNumber();
+    m_trackNumber = track->trackNumber();
     if( track->artist() )
         m_artistName = track->artist()->name();
 
@@ -68,6 +70,8 @@ Meta::TrackKey::TrackKey( const Meta::TrackPtr &track )
 
 Meta::TrackKey& Meta::TrackKey::operator=( const Meta::TrackKey &o )
 {
+    m_discNumber = o.m_discNumber;
+    m_trackNumber = o.m_trackNumber;
     m_trackName = o.m_trackName;
     m_albumName = o.m_albumName;
     m_artistName = o.m_artistName;
